# yujee-showcase

./: .env.example  .gitignore  README.md  package.json  tsconfig.base.json
apps/agent/: .env.example  pyproject.toml
apps/agent/src/: auth.py  logging_config.py  main.py  schemas.py  settings.py  templates.py
apps/agent/src/routes/: chat_edit.py  health.py  layout.py
apps/agent/src/services/: PROPRIETARY.md  callback.py  chat_edit.py  layout_rules.py  pipeline.py  planning_mock.py  vision_mock.py
apps/agent/tests/: conftest.py  test_chat_edit_patch.py  test_e2e.sh  test_layout_rules.py  test_logging_redact.py  test_pipeline_mock.py  test_schemas.py
docs/: README.md  STATUS.md  architecture.md
docs/agent/: contract.md  design.md
docs/product/: credit-hold-on-generation.md  ui-restore-gap.md
docs/web/: api.md  conventions.md  database.md  directory.md  errors.md  layering.md
